    - avoided some strlen() usage
    - replaced some ext() calls with return
    - added CMake option "USE_SANITIZERS" to enable AddressSanitizer/UndefinedBehaviorSanitizer if supported
    - removed "LOG_ALLOC" in favor of sanitizers
    - removed makefile - use CMake instead
    - moved IN_LIBXML definition for MinGW from source to CMakeList.txt
    - disabled -Wpadded Clang warning
    - enabled -Wconversion -Wsign-conversion for GCC 10+ only
    - always create a compilation database
    - a "run-clang-tidy" target will now be added if the executable is available
    - implemented ATTR_NORETURN for Visual Studio
    - added CMake option USE_VS_ANALYZE to enable Visual Studio Code Analysis
    - added CMake option USE_GCC_ANALYZER to enable GCC Static Analysis
    - added processorcount.cmake to get the available threads for the system via NPROC and NPROC_HALF
    - added iwyu.cmake and add an "run-iwyu" if the "iwyu_tool" executable is available
    - adjusted some includes based on include-what-you-use

    create_report
    - fixed some clang-tidy warnings
    - fixed Cppcheck warnings
    - fixed some CLion inspection warnings
    - improved error reporting of report type 4 (speed)
    - fixed incorrect "executed" count in the summary when "use_autosave" is set to "1"
    - added "executed with autosave" counter to summary
    - fixed/improved output when "wiki_format" is set to "2"
    - removed support for DocuWiki format ("wiki_format" set to "1")
    - renamed "wiki_format" to "use_markdown"
    - changed extension of "report_10" output to ".md"
    - changed "comparison" report to Markdown format
    - removed "report_type" 3 (tagmap report)
    - removed "tagmap_threshold"
    - added checks for fopen() calls and reported error when it fails
    - return a result from create_report()
    - added option "unexpected_stderr" to check for unexpected stderr messages

    create_image_xml
    - fixed some CLion inspection warnings